--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
-
+    {% block title %}
+    <title>天天生鲜-登录</title>
+    {% endblock title %}
 {% block body %}
+
 	<div class="login_top clearfix">
 		<a href="index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
