--- a/ttsx_xm/templates/User/register.html
+++ b/ttsx_xm/templates/User/register.html
@@ -1,24 +1,13 @@
-<<<<<<< HEAD
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-注册</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
-	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
-	<script type="text/javascript" src="/static/js/register.js"></script>
-</head>
-<body>
-=======
 {% extends 'base.html' %}
-
-{% block head %}
-	<script type="text/javascript" src="/static/js/register.js"></script>
-{% endblock head %}
+    {% block title %}
+    <title>天天生鲜-注册</title>
+    {% endblock title %}
+    {% block head %}
+    <script type="text/javascript" src="/static/js/register.js"></script>
+    {% endblock head %}
 
 {% block body %}
->>>>>>> qiu
+
 	<div class="register_con">
 		<div class="l_con fl">
 			<a class="reg_logo"><img src="/static/images/logo02.png"></a>
