--- a/ttsx_xm/templates/User/user_center_info.html
+++ b/ttsx_xm/templates/User/user_center_info.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+    {% block title %}
+    <title>天天生鲜-用户中心</title>
+    {% endblock title %}
 {% block body %}
 	<div class="header_con">
 		<div class="header">
