--- a/ttsx_xm/templates/Order/place_order.html
+++ b/ttsx_xm/templates/Order/place_order.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>天天生鲜-提交订单</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    <script src="/static/js/order.js"></script>
 </head>
 <body>
 	<div class="header_con">
@@ -15,24 +16,24 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+					<a href="/User/login.html">登录</a>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href="/User/register.html">注册</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/User/user_center_info.html">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/Cart/cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="/User/user_center_order.html">我的订单</a>
 				</div>
 			</div>
 		</div>		
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
+		<a href="/Goods/index.html" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;提交订单</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
@@ -47,7 +48,7 @@
 			<dt>寄送到：</dt>
 			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
 		</dl>
-		<a href="user_center_site.html" class="edit_site">编辑收货地址</a>
+		<a href="/User/user_center_site.html" class="edit_site">编辑收货地址</a>
 
 	</div>
 	
@@ -77,7 +78,7 @@
 		</ul>
 		<ul class="goods_list_td clearfix">
 			<li class="col01">1</li>			
-			<li class="col02"><img src="images/goods/goods012.jpg"></li>
+			<li class="col02"><img src="/static/images/goods/goods012.jpg"></li>
 			<li class="col03">奇异果</li>
 			<li class="col04">500g</li>
 			<li class="col05">25.80元</li>
@@ -86,7 +87,7 @@
 		</ul>
 		<ul class="goods_list_td clearfix">
 			<li class="col01">2</li>			
-			<li class="col02"><img src="images/goods/goods003.jpg"></li>
+			<li class="col02"><img src="/static/images/goods/goods003.jpg"></li>
 			<li class="col03">大兴大棚草莓</li>
 			<li class="col04">500g</li>
 			<li class="col05">16.80元</li>
@@ -130,7 +131,7 @@
 		
 		<div class="mask"></div>
 	</div>
-	<script type="text/javascript" src="js/jquery-1.12.2.js"></script>
+	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript">
 		$('#order_btn').click(function() {
 			localStorage.setItem('order_finish',2);
@@ -139,7 +140,7 @@
 
 				setTimeout(function(){
 					$('.popup_con').fadeOut('fast',function(){
-						window.location.href = 'index.html';
+						window.location.href = '/Goods/index.html/';
 					});	
 				},3000)
 				
