改了好多冲突

--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -10,19 +10,6 @@
 	<script type="text/javascript" src="/static/js/slide.js"></script>
 </head>
 <body>
-=======
-{% extends 'base.html' %}
-    {% block title %}
-    <title>天天生鲜-首页</title>
-    {% endblock title %}
-
-    {% block head %}
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/slide.js"></script>
-    {% endblock head %}
-
-{% block body %}
->>>>>>> c68c1325c620f230169792507ebae79a5ba4b417
 	<div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
@@ -31,7 +18,7 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="login.html/">登录</a>
+					<a href="login.html">登录</a>
 					<span>|</span>
 					<a href="register.html">注册</a>
 				</div>
@@ -44,7 +31,7 @@
 					<a href="user_center_order.html">我的订单</a>
 				</div>
 			</div>
-		</div>		
+		</div>
 	</div>
 
 	<div class="search_bar clearfix">
@@ -143,7 +130,7 @@
 			<div class="subtitle fl">
 				<span>|</span>
 				<a href="#">河虾</a>
-				<a href="#">扇贝</a>				
+				<a href="#">扇贝</a>
 			</div>
 			<a href="#" class="goods_more fr">查看更多 ></a>
 		</div>
@@ -192,7 +179,7 @@
 			<ul class="goods_list fl">
 				<li>
 					<h4><a href="#">维多利亚葡萄维多利亚葡萄维多利亚葡萄维多利亚葡萄</a></h4>
-					<a href="#"><img src="/static/images/goods.jpg"></a>
+					<a href="#"><img src="/static/iimages/goods.jpg"></a>
 					<div class="prize">¥ 38.00</div>
 				</li>
 				<li>
@@ -330,9 +317,7 @@
 			</ul>
 		</div>
 	</div>
-{% endblock body %}
 
-<<<<<<< HEAD
 	<div class="footer">
 		<div class="foot_link">
 			<a href="#">关于我们</a>
@@ -341,15 +326,11 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-=======
-
-    {% block bottom %}
->>>>>>> c68c1325c620f230169792507ebae79a5ba4b417
 	<script type="text/javascript" src="/static/js/slide.js"></script>
 	<script type="text/javascript">
 		BCSlideshow('focuspic');
@@ -367,4 +348,5 @@
 			window.location.href = 'list.html';
 		}
 	</script>
-    {% endblock bottom %}
+</body>
+</html>
