--- a/ttsx_xm/templates/Order/place_order.html
+++ b/ttsx_xm/templates/Order/place_order.html
@@ -9,17 +9,19 @@
     <script src="/static/js/order.js"></script>
 
     <script type="text/javascript">
-        $('#order_btn').click(function () {
-            localStorage.setItem('order_finish', 2);
+        $(function () {
+            $('#order_btn').click(function () {
+                localStorage.setItem('order_finish', 2);
 
-            $('.popup_con').fadeIn('fast', function () {
+                $('.popup_con').fadeIn('fast', function () {
 
-                setTimeout(function () {
-                    $('.popup_con').fadeOut('fast', function () {
-                        window.location.href = '/Goods/index.html/';
-                    });
-                }, 3000)
+                    setTimeout(function () {
+                        $('.popup_con').fadeOut('fast', function () {
+                            window.location.href = '/';
+                        });
+                    }, 3000)
 
+                });
             });
         });
     </script>
