--- a/ttsx_xm/templates/Goods/list.html
+++ b/ttsx_xm/templates/Goods/list.html
@@ -242,7 +242,7 @@
 				<a href="#">3</a>
 				<a href="#">4</a>
 				<a href="#">5</a>
-				<a href="#">下一页></a>
+				<a href="#">下一页</a>
 			</div>
 		</div>
 	</div>
