--- a/ttsx_xm/templates/Order/place_order.html
+++ b/ttsx_xm/templates/Order/place_order.html
@@ -37,38 +37,27 @@
                     欢迎您：<em>张 山</em>
                 </div>
                 <div class="login_btn fl">
-                    <a href="../User/login.html">登录</a>
+                    <a href="/User/login/">登录</a>
                     <span>|</span>
-                    <a href="../User/register.html">注册</a>
+                    <a href="/User/register/">注册</a>
                 </div>
                 <div class="user_link fl">
                     <span>|</span>
-                    <a href="/User/user_center_info.html">用户中心</a>
+                    <a href="/User/user_center_info/">用户中心</a>
                     <span>|</span>
-                    <a href="/Cart/cart.html">我的购物车</a>
+                    <a href="/Cart/cart/">我的购物车</a>
                     <span>|</span>
-                    <a href="/User/user_center_order.html">我的订单</a>
-                    <a href="../User/login.html">登录</a>
-                    <span>|</span>
-                    <a href="../User/register.html">注册</a>
+                    <a href="/User/user_center_order/">我的订单</a>
+
                 </div>
-                <div class="user_link fl">
-                    <span>|</span>
-                    <a href="../User/user_center_info.html">用户中心</a>
-                    <span>|</span>
-                    <a href="../Cart/cart.html">我的购物车</a>
-                    <span>|</span>
-                    <a href="../User/user_center_order.html">我的订单</a>
-                </div>
+
             </div>
         </div>
     </div>
 
     <div class="search_bar clearfix">
 
-        <a href="/Goods/index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-
-        <a href="../Goods/index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+        <a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 
         <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;提交订单</div>
         <div class="search_con fr">
@@ -85,9 +74,8 @@
             <dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
         </dl>
 
-        <a href="/User/user_center_site.html" class="edit_site">编辑收货地址</a>
+        <a href="/User/user_center_site" class="edit_site">编辑收货地址</a>
 
-        <a href="../User/user_center_site.html" class="edit_site">编辑收货地址</a>
 
     </div>
 
@@ -121,7 +109,7 @@
             <li class="col03">奇异果</li>
             <li class="col04">500g</li>
             <li class="col05">25.80元</li>
-            <li class="col06">1</li>
+            <li class="col06">3</li>
             <li class="col07">25.80元</li>
         </ul>
         <ul class="goods_list_td clearfix">
@@ -130,7 +118,7 @@
             <li class="col03">大兴大棚草莓</li>
             <li class="col04">500g</li>
             <li class="col05">16.80元</li>
-            <li class="col06">1</li>
+            <li class="col06">2</li>
             <li class="col07">16.80元</li>
         </ul>
     </div>
