--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -1,23 +1,32 @@
 {% extends 'base.html' %}
     {% block title %}
         <title>天天生鲜-登录</title>
+        <script type="text/javascript" src="/static/js/jquery.form.min.js"></script>
     {% endblock title %}
 
     {% block head %}
         <script type="text/javascript">
             $(function () {
-                $('.input_submit').click(function () {
+                function saveReport(){
+                    $('.nono').ajaxSubmit(function (massage) {
+                        alert(massage)
+                    });
+                    return false;
+                }
 
-                    $.get('/User/toLogin/', function (data) {
-                        if(data.verify == true) {
-                            $.get('/Goods/index/')
-                        }
-                        else (data.verify == false){
-                            console.log('ok')
-                            $('.user_error .pwd_error').show()
-                        }
-
-
+            });
+{#                $('.input_submit').click(function () {#}
+{#                        console.log('ok')#}
+{#                    $.get('/User/toLogin/', function (data) {#}
+{#                        if(data.verify == true) {#}
+{#                            $.get('/Goods/')#}
+{#                        }#}
+{#                        else#}
+{#                            (data.verify == false)#}
+{#                        {#}
+{#                            console.log('ok')#}
+{#                            $('.user_error .pwd_error').show()#}
+{#                        }#}
 
 {#                        var upsd = $('.pass_input').val()#}
 {#                        var uname = $('.name_input').val()#}
@@ -29,9 +38,9 @@
 {#                            $('.user_error .pwd_error').show()#}
 {#                            return false#}
 {#                        }#}
-                    });
-                });
-            });
+{#                    });#}
+{#                });#}
+{#            });#}
 
         </script>
     {% endblock head %}
@@ -48,12 +57,12 @@
 			<div class="slogan fl">日夜兼程 · 急速送达</div>
 			<div class="login_form fr">
 				<div class="login_title clearfix">
-					<h1>用户登录</h1>
+					<h1>用户登录 </h1>
 					<a href="#">立即注册</a>
 				</div>
 				<div class="form_input">
 
-					<form method="post" action="">
+					<form class="nono" method="post" action="/User/toLogin/" onsubmit="return saveReport();">
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
 						<div class="user_error">输入错误</div>
 
@@ -66,7 +75,12 @@
 							<a href="#">忘记密码</a>
 						</div>
 						<input type="submit" name="" value="登录" class="input_submit">
-					</form>
+					    {% if aaa == 111 %}
+                            <div class="aaa" style="display: block">用户名或密码错误,请重试!</div>
+{#                        {% else %}#}
+{#                            <div class="aaa" style="display: none">用户名或密码错误,请重试!</div>#}
+                        {% endif %}
+                    </form>
 
 				</div>
 			</div>
