--- a/ttsx_xm/static/css/main.css
+++ b/ttsx_xm/static/css/main.css
@@ -305,7 +305,7 @@ html,body{height:100%}
 .more_input a:hover{color:#ff8800}
 
 .input_submit{width:100%;height:40px;position:absolute;left:0;top:180px;background-color:#47aa34;color:#fff;font-size:22px;border:0px;font-family:'Microsoft Yahei';cursor:pointer;}
-.aaa{position: absolute;left:0;bottom:10px;color:#f00;display: none}
+.btn_error{position: absolute;left:10px;bottom:10px;color:#f00;display: none}
 
 /* 注册页面 */
 .register_con{
