--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -1,48 +1,36 @@
 {% extends 'base.html' %}
     {% block title %}
         <title>天天生鲜-登录</title>
-        <script type="text/javascript" src="/static/js/jquery.form.min.js"></script>
+
     {% endblock title %}
 
     {% block head %}
-        <script type="text/javascript">
-            $(function () {
-                function saveReport(){
-                    $('.nono').ajaxSubmit(function (massage) {
-                        alert(massage)
-                    });
-                    return false;
-                }
+    <script type="text/javascript" src="/static/js/jquery.form.min.js"></script>
+    <script type="text/javascript" src="/static/js/login.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('.input_submit').click(function () {
+                $.post('/User/toLogin/',{'name':$('.name_input').val()}, function (data) {//{}
+                    var upwd =$('.pass_input').val();
+                    if(data.pwd ==upwd){
+                        // alert('ok');
+                         window.location.href ='/';
+                        // $.get('/User/toindex/',{'name':$('.name_input').val()})
+                    }else {
+                        $('.pass_input').val('');
+                        $('.btn_error').show();
+                    }
+                });
 
             });
-{#                $('.input_submit').click(function () {#}
-{#                        console.log('ok')#}
-{#                    $.get('/User/toLogin/', function (data) {#}
-{#                        if(data.verify == true) {#}
-{#                            $.get('/Goods/')#}
-{#                        }#}
-{#                        else#}
-{#                            (data.verify == false)#}
-{#                        {#}
-{#                            console.log('ok')#}
-{#                            $('.user_error .pwd_error').show()#}
-{#                        }#}
+            $('.pass_input').focus(function () {
+                $('.btn_error').hide(); // 提示文字隐藏
+            });
 
-{#                        var upsd = $('.pass_input').val()#}
-{#                        var uname = $('.name_input').val()#}
-{#                        if((upsd == data[1]) && (uname == data[0])){#}
-{#                            $.post('/Goods/index.html')#}
-{#                        }#}
-{#                        else{#}
-{#                            console.log('ok')#}
-{#                            $('.user_error .pwd_error').show()#}
-{#                            return false#}
-{#                        }#}
-{#                    });#}
-{#                });#}
-{#            });#}
 
-        </script>
+        });
+
+    </script>
     {% endblock head %}
 {% block body %}
 
@@ -62,7 +50,7 @@
 				</div>
 				<div class="form_input">
 
-					<form class="nono" method="post" action="/User/toLogin/" onsubmit="return saveReport();">
+					<form method="post" action="">
 						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
 						<div class="user_error">输入错误</div>
 
@@ -70,16 +58,13 @@
 						<div class="pwd_error">输入错误</div>
 
                         <div class="more_input clearfix">
-							<input type="checkbox" name="">
+							<input type="checkbox" name="Remember">
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
-						<input type="submit" name="" value="登录" class="input_submit">
-					    {% if aaa == 111 %}
-                            <div class="aaa" style="display: block">用户名或密码错误,请重试!</div>
-{#                        {% else %}#}
-{#                            <div class="aaa" style="display: none">用户名或密码错误,请重试!</div>#}
-                        {% endif %}
+						<input type="button" name="" value="登录" class="input_submit">
+                        <div class="btn_error">用户名或密码错误,请重试!</div>
+
                     </form>
 
 				</div>
