--- a/ttsx_xm/templates/User/register.html
+++ b/ttsx_xm/templates/User/register.html
@@ -1,16 +1,9 @@
 {% extends 'base.html' %}
-
-{% block head %}
-	<script type="text/javascript" src="/static/js/register.js"></script>
-{% endblock head %}
-
-
-{% extends 'base.html' %}
     {% block title %}
     <title>天天生鲜-注册</title>
     {% endblock title %}
     {% block head %}
-    <script type="text/javascript" src="/static/js/register.js"></script>
+        <script type="text/javascript" src="/static/js/register.js"></script>
     {% endblock head %}
 
 {% block body %}
@@ -29,7 +22,7 @@
 			</div>
 			<div class="reg_form clearfix">
 
-				<form method="post" action="/regist/">
+				<form id="reg_form" method="post" action="/User/regist/">
 				<ul>
 					<li>
 						<label>用户名:</label>
