修改了首页，详情页，列表页的一些简单的需要跳转的a标签

--- a/ttsx_xm/templates/Goods/detail.html
+++ b/ttsx_xm/templates/Goods/detail.html
@@ -64,7 +64,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
@@ -81,16 +81,16 @@
 				<h1>全部商品分类</h1>
 				<span></span>
 				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
-					<li><a href="#" class="seafood">海鲜水产</a></li>
-					<li><a href="#" class="meet">猪牛羊肉</a></li>
-					<li><a href="#" class="egg">禽类蛋品</a></li>
-					<li><a href="#" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="#" class="ice">速冻食品</a></li>
+					<li><a href="/Goods/list1" class="fruit">新鲜水果</a></li>
+					<li><a href="/Goods/list2/" class="seafood">海鲜水产</a></li>
+					<li><a href="/Goods/list3/" class="meet">猪牛羊肉</a></li>
+					<li><a href="/Goods/list4/" class="egg">禽类蛋品</a></li>
+					<li><a href="/Goods/list5/" class="vegetables">新鲜蔬菜</a></li>
+					<li><a href="/Goods/list6/" class="ice">速冻食品</a></li>
 				</ul>
 			</div>
 			<ul class="navlist fl">
-				<li><a href="">首页</a></li>
+				<li><a href="/">首页</a></li>
 				<li class="interval">|</li>
 				<li><a href="">手机生鲜</a></li>
 				<li class="interval">|</li>
