--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -95,7 +95,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1}}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="/Goods/list{{ fruit.0.gtype.id }}" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -127,7 +127,7 @@
                 {% endfor %}
 
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ fish.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -156,7 +156,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ meal.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -184,7 +184,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ eggs.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -212,7 +212,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ vege.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -240,7 +240,7 @@
                 <a href="/Goods/{{ goods.id }}">{{ goods.gtitle.split.1 }}</a>
                 {% endfor %}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="/Goods/list{{ fastFrozen.0.gtype.id }}" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
