登录功能完善/判定用户

--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -8,16 +8,18 @@
         <script type="text/javascript">
         $(function () {
 {#            显示 欢迎用户块   #}
-            var user = $('#user').attr('href').split('/');
-            if(user[3] != ''){
-                $(".login_info").show();
-                $(".login_btn").hide();
-                $(".user").html(user[3]);
-            }
-            if(user[3] == ''){
-                $(".login_info").hide();
-                $(".login_btn").show();
-            }
+            $.get('/Goods/getname/', function (data) {
+                if(data.uname != null){
+                    $(".login_info").show();
+                    $(".login_btn").hide();
+                    $(".user").html(data.uname);
+                }
+                else{
+                    $('#user').attr('href', '/User/login/')
+                    $(".login_info").hide();
+                    $(".login_btn").show();
+                }
+            });
         });
         </script>
     {% endblock head %}
@@ -29,7 +31,7 @@
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
 				<div class="login_info fl">
-					欢迎您：<a class="user" href="/User/user_center/{{ uname }}">用户名</a>
+					欢迎您：<a class="user" href="/User/user_center/">用户名</a>
 				</div>
 				<div class="login_btn fl">
 					<a href="/User/login/">登录</a>
@@ -38,7 +40,7 @@
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a id="user" href="/User/user_center/{{ uname }}">用户中心</a>
+					<a id="user" href="/User/user_center/">用户中心</a>
 					<span>|</span>
 					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
