--- a/ttsx_xm/templates/Goods/index.html
+++ b/ttsx_xm/templates/Goods/index.html
@@ -42,7 +42,7 @@
 					<span>|</span>
 					<a href="/Cart/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="/User/user_center_order/">我的订单</a>
+					<a href="/User/user_order/{{ uname }}">我的订单</a>
 				</div>
 			</div>
 		</div>
