--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -22,7 +22,6 @@
             $('.input_submit').click(function () {
                 $.post('/User/toLogin/', {'name': $('.name_input').val()}, function (data) {//{}
                     var upwd = $('.pass_input').val();
-                    var i = 1;
                     if (data.pwd == upwd) {
                         $.get('/User/toindex/', {'name': $('.name_input').val()}, function () {
                             window.location.href = '/';
@@ -30,19 +29,15 @@
                     }
                     else if(data.pwd == 'notValid'){
                         $('.pass_input').val('');
-                        $('.btn_error').html('当前账号不可用').show();
+                        $('.btn_error').html('当前账号不可用!').show();
                         }
                     else if(data.pwd == 'notExists'){
                         $('.pass_input').val('');
-                        $('.btn_error').html('用户名不存在').show();
+                        $('.btn_error').html('用户名不存在!').show();
                         }
                     else {
                         $('.pass_input').val('');
-                        $('.btn_error').html('用户名或密码错误,请重试!').show();
-                        i += 1;
-                        if (i >= 3) {
-                            $.get('/User/lockPwd/')
-                        }
+                        $('.btn_error').html('用户名或密码错误,请重试!').show()
                     }
                     });
             });
