--- a/ttsx_xm/templates/User/user_center_site.html
+++ b/ttsx_xm/templates/User/user_center_site.html
@@ -26,7 +26,8 @@
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
 				<div class="login_info fl">
-					欢迎您：<span id="user">用户名</span>
+					欢迎您：<a id="user">用户名</a>
+                    <a class="quit" href="/Goods/delete/">&nbsp;&nbsp;退出</a>
 				</div>
 				<div class="login_btn fl">
 					<a href="/User/login/">登录</a>
