发送激活邮件/密码加密/登录激活判断

--- a/ttsx_xm/templates/User/login.html
+++ b/ttsx_xm/templates/User/login.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="/static/js/login.js"></script>
     <script type="text/javascript">
         $(function () {
-
+            //存用户名
             $.get('/User/readName/', function (data) {// {list:[...]}
                 var list = data.lname;  // []
                 var rename = $('.rename');
@@ -35,11 +35,18 @@
                         $('.pass_input').val('');
                         $('.btn_error').html('用户名不存在!').show();
                         }
+                    else if(data.pwd == 'notActive'){
+                        $('.pass_input').val('');
+                        $('.btn_error').html('当前账号未激活!').show();
+                        var uid = data.uid;
+                        var url = 'http://127.0.0.1:8000/User/send'+uid;
+                        window.location.href = url;
+                    }
                     else {
                         $('.pass_input').val('');
                         $('.btn_error').html('用户名或密码错误,请重试!').show()
                     }
-                    });
+                });
             });
 
 
